<resources>
    <string name="app_name">MediaLibrary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_add_media">AddMediaActivity</string>
    <string name="add_year">Year</string>
    <string name="add_runtime">Runtime</string>
    <string name="add_genre">Genre</string>
    <string name="add_actors">Actors</string>
    <string name="add_search">Search</string>
    <string name="add_add">Add</string>
    <string name="add_title">Title</string>
    <string name="title_activity_display_media">DisplayMedia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
