<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_add_media"
        tools:context="com.rdulinjr.medialibrary.AddMediaActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poster"
            android:layout_marginTop="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/title_editText"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/poster"
            android:layout_marginTop="30dp"
            android:hint="@string/add_title"
            android:textAlignment="center" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/year_editText"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title_editText"
            android:layout_marginTop="20dp"
            android:hint="@string/add_year"
            android:textAlignment="center" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/runtime_editText"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/year_editText"
            android:layout_marginTop="20dp"
            android:hint="@string/add_runtime"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/genre_editText"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/runtime_editText"
            android:layout_marginTop="20dp"
            android:hint="@string/add_genre"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/actors_editText"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/genre_editText"
            android:layout_marginTop="20dp"
            android:hint="@string/add_actors"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_search"
            android:id="@+id/search_button"
            android:layout_below="@+id/actors_editText"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/actors_editText"
            android:layout_alignStart="@+id/actors_editText"
            android:onClick="add_SearchClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_add"
            android:id="@+id/add_button"
            android:layout_below="@+id/actors_editText"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/actors_editText"
            android:layout_alignEnd="@+id/actors_editText"
            android:onClick="add_AddClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/next_button"
            android:layout_below="@+id/add_button"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/actors_editText"
            android:layout_alignEnd="@+id/actors_editText"
            android:onClick="add_NextClicked"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Previous"
            android:id="@+id/previous_button"
            android:layout_below="@+id/search_button"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/actors_editText"
            android:layout_alignStart="@+id/actors_editText"
            android:onClick="add_PrevClicked"
            android:visibility="gone" />


    </RelativeLayout>
</ScrollView>